tests/neg-custom-args/captures/reaches.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:23:11 --------------------------------------
23 |    cur = (() => f.write()) :: Nil  // error
   |           ^^^^^^^^^^^^^^^^^^^^^^^
   |           Found:    List[() ->{f} Unit]
   |           Required: List[() ->{C} Unit]
   |
   |           Note that capability `f` is not included in capture set {C}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:34:7 ---------------------------------------
34 |      (() => f.write()) :: Nil // error
   |       ^^^^^^^^^^^^^^^^^^^^^^^
   |       Found:    List[() ->{f} Unit]
   |       Required: List[() ->{C} Unit]^{}
   |
   |       Note that capability `f` cannot be included in capture set {C} of value cur.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:54:27 --------------------------------------
54 |  val id: Id[Proc, Proc] = new Id[Proc, () -> Unit] // error
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^
   |                           Found:    Id[() ->{any} Unit, () -> Unit]^'s1
   |                           Required: Id[() ->{any²} Unit, () => Unit]
   |
   |                           Note that capability `any²` is not included in capture set {any}
   |                           because any² is not visible from any in value id.
   |
   |                           where:    =>   refers to a root capability in the type of value id
   |                                     any  is a root capability created in value id
   |                                     any² is the root capability caps.any
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:59:32 --------------------------------------
59 |  val id: File^ -> File^ = x => x // error
   |                                ^
   |Found:    (x : File^)
   |Required: File^{any}
   |
   |Note that capability `x` is not included in capture set {any}
   |because (x : File^) in an enclosing function is not visible from any in value id.
   |
   |where:    ^   refers to a root capability created in anonymous function of type (x²: File^²): File^² of parameter parameter x of method $anonfun
   |          any is a root capability in the type of value id
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/reaches.scala:71:27 --------------------------------------
71 |    val f1: File^{id*} = id(f)   // error
   |                         ^^^^^
   |Found:    File^{any}
   |Required: File^{id*}
   |
   |Note that capability `any` is not included in capture set {id*}.
   |
   |where:    any is a root capability created in value f1 when instantiating method apply's type (x: File^): File^{fresh}
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/reaches.scala:39:31 -----------------------------------------------------------
39 |    val next: () => Unit = cur.head   // error, use
   |                           ^^^^^^^^
   |                           Local reach capability xs* leaks into capture scope of method runAll2.
   |                           You could try to abstract the capabilities referred to by xs* in a capset variable.
-- Error: tests/neg-custom-args/captures/reaches.scala:46:35 -----------------------------------------------------------
46 |    val next: () => Unit = cur.get.head // error // error
   |                           ^^^^^^^^^^^^
   |                           Local reach capability xs* leaks into capture scope of method runAll3.
   |                           You could try to abstract the capabilities referred to by xs* in a capset variable.
-- Error: tests/neg-custom-args/captures/reaches.scala:88:10 -----------------------------------------------------------
88 |  ps.map((x, y) => compose1(x, y)) // error // error // error
   |          ^
   |          Local reach capability ps* leaks into capture scope of method mapCompose.
   |          You could try to abstract the capabilities referred to by ps* in a capset variable.
-- Error: tests/neg-custom-args/captures/reaches.scala:88:13 -----------------------------------------------------------
88 |  ps.map((x, y) => compose1(x, y)) // error // error // error
   |             ^
   |             Local reach capability ps* leaks into capture scope of method mapCompose.
   |             You could try to abstract the capabilities referred to by ps* in a capset variable.
-- Error: tests/neg-custom-args/captures/reaches.scala:44:9 ------------------------------------------------------------
44 |  val cur = Ref[List[Proc]](xs) // error
   |         ^
   |         Separation failure: value cur's inferred type Ref[List[() => Unit]^{}]^ hides parameter xs.
   |         The parameter needs to be annotated with consume to allow this.
-- Error: tests/neg-custom-args/captures/reaches.scala:46:17 -----------------------------------------------------------
46 |    val next: () => Unit = cur.get.head // error // error
   |              ^^^^^^^^^^
   |              Separation failure: value next's type () => Unit hides parameter xs.
   |              The parameter needs to be annotated with consume to allow this.
-- Error: tests/neg-custom-args/captures/reaches.scala:88:28 -----------------------------------------------------------
88 |  ps.map((x, y) => compose1(x, y)) // error // error // error
   |                            ^
   |Separation failure: argument of type  A ->{x} A
   |to method compose1: [A, B, C](f: A => B, g: B => C): A ->{f, g} C
   |corresponds to capture-polymorphic formal parameter f of type  A^'s2 => A^'s3
   |and hides capabilities  {x}.
   |Some of these overlap with the captures of the second argument with type  A ->{y} A.
   |
   |  Hidden set of current argument        : {x}
   |  Hidden footprint of current argument  : {x, ps*}
   |  Capture set of second argument        : {y}
   |  Footprint set of second argument      : {y, ps*}
   |  The two sets overlap at               : {ps*}
   |
   |where:    => refers to a root capability created in anonymous function of type (x$1: (A ->{ps*} A, A ->{ps*} A)): A^'s4 ->{ps*} A^'s5 when checking argument to parameter f of method compose1
-- Error: tests/neg-custom-args/captures/reaches.scala:91:28 -----------------------------------------------------------
91 |  ps.map((x, y) => compose1(x, y)) // error
   |                            ^
   |Separation failure: argument of type  A ->{x} A
   |to method compose1: [A, B, C](f: A => B, g: B => C): A ->{f, g} C
   |corresponds to capture-polymorphic formal parameter f of type  A^'s6 => A^'s7
   |and hides capabilities  {x}.
   |Some of these overlap with the captures of the second argument with type  A ->{y} A.
   |
   |  Hidden set of current argument        : {x}
   |  Hidden footprint of current argument  : {x, C}
   |  Capture set of second argument        : {y}
   |  Footprint set of second argument      : {y, C}
   |  The two sets overlap at               : {C}
   |
   |where:    => refers to a root capability created in anonymous function of type (x$1: (A ->{C} A, A ->{C} A)): A^'s8 ->{C} A^'s9 when checking argument to parameter f of method compose1
